# openvibe-designer

./: .gitignore  CMakeLists.txt  CustomCMakeLists.txt-certivibe  README.md
applications/platform/designer/: CMakeLists.txt
applications/platform/designer/share/: about-dialog.ui-base  designer.conf  designer.conf-base  interface-archway.ui  interface-settings.ui-base  interface.ui-base
applications/platform/designer/src/: CApplication.cpp  CBoxConfigurationDialog.cpp  CDesignerVisualization.cpp  CInterfacedScenario.cpp  CLogListenerDesigner.cpp  CLogListenerDesigner.hpp  CPlayerVisualization.cpp  CSettingCollectionHelper.cpp  main.cpp  ovdAssert.h  ovdCAboutPluginDialog.cpp  ovdCAboutPluginDialog.h  ovdCAboutScenarioDialog.cpp  ovdCAboutScenarioDialog.h  ovdCApplication.cpp  ovdCApplication.h  ovdCArchwayHandler.cpp  ovdCArchwayHandler.h  ovdCArchwayHandlerGUI.cpp  ovdCArchwayHandlerGUI.h  ovdCBoxConfigurationDialog.cpp  ovdCBoxConfigurationDialog.h  ovdCBoxProxy.cpp  ovdCBoxProxy.h  ovdCCommentEditorDialog.cpp  ovdCCommentEditorDialog.h  ovdCCommentProxy.cpp  ovdCCommentProxy.h  ovdCConnectorEditor.cpp  ovdCConnectorEditor.h  ovdCDesignerVisualisation.cpp  ovdCDesignerVisualisation.h  ovdCDesignerVisualization.cpp  ovdCDesignerVisualization.h  ovdCFileFormats.cpp  ovdCFileFormats.h  ovdCInputDialog.cpp  ovdCInputDialog.h  ovdCInterfacedObject.cpp  ovdCInterfacedObject.h  (+24 more)
applications/platform/designer/src/archway/: ovProcessUtilities.hpp  ovdCArchwayHandler.cpp  ovdCArchwayHandler.h  ovdCArchwayHandlerGUI.cpp  ovdCArchwayHandlerGUI.h
applications/platform/designer/src/dynamic_settings/: CColorGradientSettingView.cpp  CColorGradientSettingView.hpp  ovdCAbstractSettingView.cpp  ovdCAbstractSettingView.h  ovdCBitMaskSettingView.cpp  ovdCBitMaskSettingView.h  ovdCBooleanSettingView.cpp  ovdCBooleanSettingView.h  ovdCColorGradientSettingView.cpp  ovdCColorGradientSettingView.h  ovdCColorSettingView.cpp  ovdCColorSettingView.h  ovdCEnumerationSettingView.cpp  ovdCEnumerationSettingView.h  ovdCFilenameSettingView.cpp  ovdCFloatSettingView.cpp  (+10 more)
documentation/: CMakeLists.txt
libraries/lib-advanced-visualization/: CMakeLists.txt
libraries/lib-advanced-visualization/include/mensia/: advanced-visualization.h  advanced-visualization.hpp
libraries/lib-advanced-visualization/src/: CRendererBars.cpp  CRendererBitmap.cpp  CRendererConnectivity.cpp  CRendererCube.cpp  CRendererFlower.cpp  CRendererLine.cpp  CRendererLoreta.cpp  CRendererMountain.cpp  CRendererMultiLine.cpp  CRendererSlice.cpp  CRendererTopo.cpp  CRendererXYZPlot.cpp  IRenderer.cpp  RendererTools.hpp  TRendererStimulation.hpp  mC3DMesh.cpp  mC3DMesh.hpp  mCRenderer.cpp  mCRenderer.hpp  mCRendererBars.cpp  mCRendererBars.hpp  mCRendererBitmap.cpp  mCRendererBitmap.hpp  mCRendererConnectivity.cpp  mCRendererConnectivity.hpp  mCRendererContext.cpp  mCRendererContext.hpp  mCRendererCube.cpp  mCRendererCube.hpp  mCRendererFlower.cpp  mCRendererFlower.hpp  mCRendererLine.cpp  mCRendererLine.hpp  mCRendererLoreta.cpp  mCRendererLoreta.hpp  mCRendererMountain.cpp  mCRendererMountain.hpp  mCRendererMultiLine.cpp  mCRendererMultiLine.hpp  mCRendererSlice.cpp  (+14 more)
libraries/lib-advanced-visualization/src/content/: Face.obj.hpp  Scalp.obj.hpp  loreta_anatomic_voxels.hpp  loreta_roi_voxels.hpp
libraries/lib-advanced-visualization/test/renderer/: CMakeLists.txt  main_test_renderer.cpp
plugins/examples/: CMakeLists.txt
plugins/examples/src/: ovp_defines.h  ovp_main.cpp
plugins/examples/src/box-algorithms/: ovpCBoxAlgorithmModifiableSettings.cpp  ovpCBoxAlgorithmModifiableSettings.h
plugins/visualization/ovp-advanced-visualization/: CMakeLists.txt
plugins/visualization/ovp-advanced-visualization/box-tutorials/: 2DTopography.mxs  3DCubes.mxs  3DTopography.mxs  ContinuousBars.mxs  ContinuousBitmap.mxs  ContinuousMultiOscilloscope.mxs  ContinuousOscilloscope.mxs  InstantBars.mxs  InstantBitmap.mxs  InstantMultiOscilloscope.mxs  InstantOscilloscope.mxs  StackedBitmapHorz.mxs  StackedBitmapVert.mxs  UseCase-1-EEG-signal-analysis.mxs
plugins/visualization/ovp-advanced-visualization/doc/: Doc_BoxAlgorithm_2DTopography.dox-part  Doc_BoxAlgorithm_3DTomographicVisualization.dox-part  Doc_BoxAlgorithm_ContinuousOscilloscope.dox-part  Doc_BoxAlgorithm_InstantBars.dox-part  Doc_BoxAlgorithm_InstantBitmap.dox-part  Doc_BoxAlgorithm_InstantBitmap3DStream.dox-part  Doc_BoxAlgorithm_StackedBitmapHorizontal.dox-part  Doc_BoxAlgorithm_StackedBitmapVertical.dox-part  advviz-1-generalities.dox  advviz-2-concepts.dox  advviz-4-usecases.dox
plugins/visualization/ovp-advanced-visualization/src/: GtkGL.cpp  TGtkGLWidget.hpp  mCBoxAlgorithmViz.cpp  mCBoxAlgorithmViz.hpp  mCMouse.cpp  mCMouse.hpp  mCVertex.hpp  mIRuler.hpp  mTBoxAlgorithmContinuousViz.hpp  mTBoxAlgorithmInstantLoretaViz.hpp  mTBoxAlgorithmInstantViz.hpp  mTBoxAlgorithmStackedContinuousViz.hpp  mTBoxAlgorithmStackedContinuousViz.inl  mTBoxAlgorithmStackedInstantViz.hpp  mTGtkGLWidget.hpp  m_GtkGL.cpp  m_GtkGL.hpp  m_VisualizationTools.cpp  m_VisualizationTools.hpp  m_defines.hpp  m_main.cpp
plugins/visualization/simple-visualization/: CMakeLists.txt
plugins/visualization/simple-visualization/box-tutorials/: display-cue-image.mxs
plugins/visualization/simple-visualization/doc/: Doc_BoxAlgorithm_DisplayCueImage.dox-part
plugins/visualization/simple-visualization/src/: ovp_defines.h  ovp_main.cpp
visualization-toolkit/: CMakeLists.txt
visualization-toolkit/include/visualization-toolkit/: ovvizColorGradient.h  ovvizIVisualizationContext.h  ovvizIVisualizationManager.h  ovvizIVisualizationTree.h  ovvizIVisualizationWidget.h  ovviz_all.h  ovviz_base.h  ovviz_defines.h  ovvtkColorGradient.h  ovvtkIVisualizationContext.h  ovvtkIVisualizationManager.h  ovvtkIVisualizationTree.h  ovvtkIVisualizationWidget.h  ovvtk_all.h  ovvtk_base.h  ovvtk_defines.h
visualization-toolkit/src/: ovvizCVisualizationContext.cpp  ovvizCVisualizationContext.hpp  ovvizColorGradient.cpp  ovviz_main.cpp  ovvtkCVisualizationContext.cpp  ovvtkCVisualizationContext.hpp  ovvtkColorGradient.cpp  ovvtk_main.cpp
(+243 files in other folders)
